language/move-prover/tests/sources/arithm.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/arithm.move:69:6 ───
    │
 69 │         aborts_if false;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/arithm.move:64:5: div_by_zero (entry)
    =     at tests/sources/arithm.move:66:11: div_by_zero (ABORTED)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/arithm.move:53:6 ───
    │
 53 │         aborts_if false;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/arithm.move:48:2: overflow (entry)
    =     at tests/sources/arithm.move:50:11: overflow (ABORTED)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/arithm.move:61:6 ───
    │
 61 │         aborts_if false;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/arithm.move:56:5: underflow (entry)
    =     at tests/sources/arithm.move:58:11: underflow (ABORTED)
